Atualizando blog automaticamente

--- a/14-day/01-ditch-fads-embrace-real-results/index.html
+++ b/14-day/01-ditch-fads-embrace-real-results/index.html
@@ -6,7 +6,7 @@
   <title>Ditch Fads, Embrace Real Results | 14‑Day Digestive Health Reboot</title>
 
   <!-- Pinterest Rich Pins metadata -->
-  <meta property="og:type" content="product" />
+  <meta property="og:type" content="article" />
   <meta property="og:title" content="Ditch Fads, Embrace Real Results" />
   <meta property="og:description" content="Forget fleeting diet trends—our 14‑day reboot is science‑based, sustainable & fits real life. No gimmicks, just lasting gut balance & energy 🌟📆" />
   <meta property="og:image" content="https://imgur.com/r6Ds2Ng.jpg" />
