--- a/14-day/02-14-day-flat-belly-reset/index.html
+++ b/14-day/02-14-day-flat-belly-reset/index.html
@@ -6,7 +6,7 @@
   <title>14‑Day Flat Belly Reset—No Crash Diet | 14‑Day Digestive Health Reboot</title>
 
   <!-- Pinterest Rich Pins metadata -->
-  <meta property="og:type" content="product" />
+  <meta property="og:type" content="article" />
   <meta property="og:title" content="14‑Day Flat Belly Reset—No Crash Diet" />
   <meta property="og:description" content="Follow this gentle, science‑backed 14‑day protocol to banish bloating, boost energy & reset your digestion. Feel lighter and more vibrant by day 14!" />
   <meta property="og:image" content="https://imgur.com/ZibFf4c.jpg" />
