--- a/14-day/04-why-day4-gut-gamechanger/index.html
+++ b/14-day/04-why-day4-gut-gamechanger/index.html
@@ -6,7 +6,7 @@
   <title>Why Day 4 Is a Gut Game‑Changer | 14‑Day Digestive Health Reboot</title>
 
   <!-- Pinterest Rich Pins metadata -->
-  <meta property="og:type" content="product" />
+  <meta property="og:type" content="article" />
   <meta property="og:title" content="Why Day 4 Is a Gut Game‑Changer" />
   <meta property="og:description" content="On Day 4 your microbiome shifts, mood lifts & energy spikes ⚡️ Learn exactly what to expect & how to amplify it with simple rituals—unlock your best days ahead!" />
   <meta property="og:image" content="https://imgur.com/R9ll0WW.jpg" />
