--- a/14-day/05-real-14-day-wins/index.html
+++ b/14-day/05-real-14-day-wins/index.html
@@ -6,7 +6,7 @@
   <title>Real 14‑Day Wins: Swipe to Believe | 14‑Day Digestive Health Reboot</title>
 
   <!-- Pinterest Rich Pins metadata -->
-  <meta property="og:type" content="product" />
+  <meta property="og:type" content="article" />
   <meta property="og:title" content="Real 14‑Day Wins: Swipe to Believe" />
   <meta property="og:description" content="Over 1,000 people are transforming their gut health with this gentle 14-day reset. Swipe through key benefits, science-backed steps & how you can join the movement." />
   <meta property="og:image" content="https://imgur.com/YVNYhV2.jpg" />
