--- a/14-day/06-your-ultimate-digestive-toolkit/index.html
+++ b/14-day/06-your-ultimate-digestive-toolkit/index.html
@@ -6,7 +6,7 @@
   <title>Your Ultimate Digestive Toolkit | 14‑Day Digestive Health Reboot</title>
 
   <!-- Pinterest Rich Pins metadata -->
-  <meta property="og:type" content="product" />
+  <meta property="og:type" content="article" />
   <meta property="og:title" content="Your Ultimate Digestive Toolkit" />
   <meta property="og:description" content="Get the exact meal plan, recipes & supplement checklist you need to reboot in 14 days—no guesswork, just simple steps to a happier gut 🌿📋" />
   <meta property="og:image" content="https://imgur.com/Embo30b.jpg" />
