--- a/14-day/07-sneaky-bloat-triggers/index.html
+++ b/14-day/07-sneaky-bloat-triggers/index.html
@@ -6,7 +6,7 @@
   <title>Sneaky Bloat Triggers You Never Saw Coming | 14‑Day Digestive Health Reboot</title>
 
   <!-- Pinterest Rich Pins metadata -->
-  <meta property="og:type" content="product" />
+  <meta property="og:type" content="article" />
   <meta property="og:title" content="Sneaky Bloat Triggers You Never Saw Coming" />
   <meta property="og:description" content="Surprising foods like certain nuts, seeds and nightshades can stall your reset—learn the 7 sneaky culprits & what to swap for instant relief 🥜🚫" />
   <meta property="og:image" content="https://imgur.com/Embo30b.jpg" />
