--- a/14-day/08-quiet-your-gut-quiet-your-mind/index.html
+++ b/14-day/08-quiet-your-gut-quiet-your-mind/index.html
@@ -6,7 +6,7 @@
   <title>Quiet Your Gut, Quiet Your Mind | 14‑Day Digestive Health Reboot</title>
   
   <!-- Pinterest Rich Pins metadata -->
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="Quiet Your Gut, Quiet Your Mind – 14‑Day Digestive Health Reboot">
   <meta property="og:description" content="Balanced digestion brings calm clarity—quiet your gut in 14 days with Dr. Joe Leech’s science-backed reboot.">
   <meta property="og:image" content="https://imgur.com/RCMe5K6.jpg">
