--- a/14-day/09-top-5-qa-digestive-reset/index.html
+++ b/14-day/09-top-5-qa-digestive-reset/index.html
@@ -6,7 +6,7 @@
   <title>Top 5 Q&A for Your Digestive Reset | 14‑Day Digestive Health Reboot</title>
 
   <!-- Pinterest Rich Pins metadata -->
-  <meta property="og:type" content="product" />
+  <meta property="og:type" content="article" />
   <meta property="og:title" content="Top 5 Q&A for Your Digestive Reset" />
   <meta property="og:description" content="Got questions? We’ve got answers—swipe through the top 5 FAQs from real users & feel confident to start your 14‑day transformation today" />
   <meta property="og:image" content="https://imgur.com/7YwykfF.jpg" />
