--- a/14-day/10-community-reset-1200-rebooters/index.html
+++ b/14-day/10-community-reset-1200-rebooters/index.html
@@ -6,7 +6,7 @@
   <title>Community Reset: Join 1,200+ Rebooters | 14‑Day Digestive Health Reboot</title>
 
   <!-- Pinterest Rich Pins metadata -->
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="Community Reset: Join 1,200+ Rebooters">
   <meta property="og:description" content="Over 1,200 people completed our reboot this month—see the movement, share your progress & feel the support of a thriving gut‑care community 🤝✨">
   <meta property="og:image" content="https://imgur.com/Cw2rtfo.jpg">
