--- a/prime-biome/02-why-your-bloated-belly-isnt-fat-its-this/index.html
+++ b/prime-biome/02-why-your-bloated-belly-isnt-fat-its-this/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Think it’s belly fat? It might be bacterial imbalance. Learn how PrimeBiome targets the real root of bloating and discomfort.">
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="Why Your Bloated Belly Isn’t Fat — It’s THIS">
   <meta property="og:description" content="Think it’s fat? It’s an out‑of‑balance microbiome! Primebiome targets the root cause—restore your gut’s harmony and watch the bloat melt away.">
   <meta property="og:image" content="https://imgur.com/aeY02E6.jpg">
