--- a/prime-biome/03-confidence-starts-from-your-gut/index.html
+++ b/prime-biome/03-confidence-starts-from-your-gut/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Discover how PrimeBiome supports gut health, radiant skin, and mental clarity. Confidence starts from the inside out.">
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="Confidence Starts from Your Gut">
   <meta property="og:description" content="When your digestion’s calm, your mind’s calm—Primebiome helps you shine inside‑out. Join thousands who rediscovered true confidence!">
   <meta property="og:image" content="https://imgur.com/EpDDiTo.jpg">
