--- a/prime-biome/04-3-gut-signals-ignoring/index.html
+++ b/prime-biome/04-3-gut-signals-ignoring/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Gas, brain fog, irregularity—your microbiome is calling for help. Discover the top 3 gut signals you might be ignoring and how PrimeBiome can restore balance.">
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="3 Gut Signals You’re Ignoring">
   <meta property="og:description" content="Persistent gas? Irregularity? Brain fog? These 3 silent alarms mean your microbiome is crying for help. Primebiome’s 4 strains answer the call—get the guide now!">
   <meta property="og:image" content="https://imgur.com/Yxi2w5t.jpg">
