--- a/prime-biome/05-busy-life/index.html
+++ b/prime-biome/05-busy-life/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Busy schedule? No problem. Discover how a 10-second daily gut reset with PrimeBiome transforms digestion, skin, and mood.">
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="Busy Life? 10‑Sec Daily Gut Reset">
   <meta property="og:description" content="No time? No problem—one Primebiome capsule daily takes only 10 seconds but transforms how you feel inside out. Perfect for hectic schedules!">
   <meta property="og:image" content="https://imgur.com/PL4Wzpa.jpg">
