--- a/prime-biome/06-the-gut-pros-wont-tell/index.html
+++ b/prime-biome/06-the-gut-pros-wont-tell/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Discover the untold truth behind soil-based probiotics and why PrimeBiome may be the missing link your gut needs.">
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="The Gut Pros Won’t Tell You">
   <meta property="og:description" content="Gut specialists overlook soil‑based strains—Primebiome fills that critical gap. Discover the secret they’re not talking about!">
   <meta property="og:image" content="https://imgur.com/QKmUHve.jpg">
