--- a/prime-biome/07-7‑day-primebiome-experiment/index.html
+++ b/prime-biome/07-7‑day-primebiome-experiment/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="What happens when you give your gut 7 days of PrimeBiome? Learn what to expect during the first week of this powerful probiotic reset.">
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="7‑Day Primebiome Experiment">
   <meta property="og:description" content="Just 1 capsule a day—for 7 days. That’s all it takes to start feeling the shift: less bloat, more clarity, smoother digestion. PrimeBiome’s science-backed blend is small, but mighty.">
   <meta property="og:image" content="https://imgur.com/W2mxLzR.jpg">
