--- a/prime-biome/08-youthful-energy-from-within/index.html
+++ b/prime-biome/08-youthful-energy-from-within/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Your gut ages you—but PrimeBiome’s probiotic reset restores clarity, digestion, and daily vitality. Reverse from the inside out.">
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="Youthful Energy from Within ✨">
   <meta property="og:description" content="Your gut ages you—but Primebiome’s probiotic boost rejuvenates digestion for more energy & clarity. Feel 10 years younger!">
   <meta property="og:image" content="https://imgur.com/Evn9ylp.jpg">
