--- a/prime-biome/09-feel-light-again-from-the-soil-up/index.html
+++ b/prime-biome/09-feel-light-again-from-the-soil-up/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Discover how PrimeBiome’s 4-strain soil-based probiotic blend brings lasting digestive relief. Bloat-free living starts from the gut.">
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="og:title" content="Feel Light Again—From the Soil Up">
   <meta property="og:description" content="Discover how Primebiome’s 4‑strain soil‑based probiotic blend restored my digestive freedom in just weeks 🌿✨ Say goodbye to bloating, gas and gut discomfort for good—science‑backed relief is here!">
   <meta property="og:image" content="https://imgur.com/9sAohQn.jpg">
