--- a/prime-biome/index copy.html
+++ b/prime-biome/index copy.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Discover how to reset your gut, skin, and energy in just 10 seconds a day. PrimeBiome is the trusted daily probiotic that works from the inside out.">
-  <meta property="og:type" content="article">
+  <meta property="og:type" content="product">
   <meta property="og:title" content="Bloated & Exhausted? Reset Your Gut in 10 Seconds a Day">
   <meta property="og:description" content="PrimeBiome is the gut-based routine that supports your skin, mood, and digestion—all in 1 gummy a day.">
   <meta property="og:image" content="https://imgur.com/CUloWL6.jpg">
@@ -69,6 +69,35 @@
     a {
       color: #00e0ff;
     }
+.related-articles {
+  background: #0a192f;
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #fcd34d;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 300px;
+}
   </style>
 </head>
 <body>
@@ -135,6 +164,25 @@
       <img src="https://imgur.com/Sfv2abx.jpg" alt="PrimeBiome bottles with satisfaction guarantee banner" class="final-image" loading="lazy">
     </a>
   </main>
+
+<section class="related-articles">
+  <h2>Related Articles</h2>
+  <div class="products-grid">
+
+    <a href="https://gutcare.fit/prime-biome/02-why-your-bloated-belly-isnt-fat-its-this" class="product-card" target="_blank">
+      <img src="https://imgur.com/aeY02E6.jpg" alt="A lush garden shaped like an abstract intestine and tiny bad bacteria drawn like quirky cartoon gremlins.">
+    </a>
+
+    <a href="https://gutcare.fit/14-day/01-ditch-fads-embrace-real-results" class="product-card" target="_blank">
+      <img src="https://imgur.com/r6Ds2Ng.jpg" alt="Person tearing down posters labeled Keto, Juice Cleanse, Detox Tea from a brick wall, revealing fresh greens and probiotics blooming behind.">
+    </a>
+
+    <a href="https://gutcare.fit/mitolyn/01-unlock-your-bodys-real-fat-burning-power" class="product-card" target="_blank">
+      <img src="https://imgur.com/SXAzKg7.jpg" alt="A woman silhouette with radiant mitochondria inside, lighting up the torso like glowing embers.">
+    </a>
+
+  </div>
+</section>
 
   <footer>
     <h3>FAQs & Medical Disclaimer</h3>
