--- a/Mitolyn/03-this-isnt-caffeine/index.html
+++ b/Mitolyn/03-this-isnt-caffeine/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="pinterest-rich-pin" content="true">
-  <meta property="og:type" content="product">
+  <meta property="og:type" content="article">
   <meta property="product:price:amount" content="79">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
