Atualizando blog automaticamente

--- a/14-day/01-ditch-fads-embrace-real-results/index.html
+++ b/14-day/01-ditch-fads-embrace-real-results/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Ditch Fads, Embrace Real Results" />
   <meta property="og:description" content="Forget fleeting diet trends—our 14‑day reboot is science‑based, sustainable & fits real life. No gimmicks, just lasting gut balance & energy 🌟📆" />
   <meta property="og:image" content="https://imgur.com/r6Ds2Ng.jpg" />
-  <meta property="og:url" content="https://yourwebsite.com/ditch-fads-real-results" />
+  <meta property="og:url" content="https://gutcare.fit/14-day/01-ditch-fads-embrace-real-results/" />
   <meta property="product:price:amount" content="39" />
   <meta property="product:price:currency" content="USD" />
   <meta property="product:availability" content="in_stock" />
