--- a/14-day/02-14-day-flat-belly-reset/index.html
+++ b/14-day/02-14-day-flat-belly-reset/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="14‑Day Flat Belly Reset—No Crash Diet" />
   <meta property="og:description" content="Follow this gentle, science‑backed 14‑day protocol to banish bloating, boost energy & reset your digestion. Feel lighter and more vibrant by day 14!" />
   <meta property="og:image" content="https://imgur.com/ZibFf4c.jpg" />
-  <meta property="og:url" content="https://yourwebsite.com/14day-flat-belly-reset" />
+  <meta property="og:url" content="https://gutcare.fit/14-day/02-14day-flat-belly-reset" />
   <meta property="product:price:amount" content="39" />
   <meta property="product:price:currency" content="USD" />
   <meta property="product:availability" content="in_stock" />
