--- a/14-day/04-why-day4-gut-gamechanger/index.html
+++ b/14-day/04-why-day4-gut-gamechanger/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Why Day 4 Is a Gut Game‑Changer" />
   <meta property="og:description" content="On Day 4 your microbiome shifts, mood lifts & energy spikes ⚡️ Learn exactly what to expect & how to amplify it with simple rituals—unlock your best days ahead!" />
   <meta property="og:image" content="https://imgur.com/R9ll0WW.jpg" />
-  <meta property="og:url" content="https://yourwebsite.com/day-4-gut-gamechanger" />
+  <meta property="og:url" content="https://gutcare.fit/14-day/04-why-day4-gut-gamechanger" />
   <meta property="product:price:amount" content="39" />
   <meta property="product:price:currency" content="USD" />
   <meta property="product:availability" content="in_stock" />
