--- a/14-day/05-real-14-day-wins/index.html
+++ b/14-day/05-real-14-day-wins/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Real 14‑Day Wins: Swipe to Believe" />
   <meta property="og:description" content="Over 1,000 people are transforming their gut health with this gentle 14-day reset. Swipe through key benefits, science-backed steps & how you can join the movement." />
   <meta property="og:image" content="https://imgur.com/YVNYhV2.jpg" />
-  <meta property="og:url" content="https://yourwebsite.com/real-14-day-wins" />
+  <meta property="og:url" content="https://gutcare.fit/14-day/05-real-14-day-wins" />
   <meta property="product:price:amount" content="39" />
   <meta property="product:price:currency" content="USD" />
   <meta property="product:availability" content="in_stock" />
