--- a/14-day/06-your-ultimate-digestive-toolkit/index.html
+++ b/14-day/06-your-ultimate-digestive-toolkit/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Your Ultimate Digestive Toolkit" />
   <meta property="og:description" content="Get the exact meal plan, recipes & supplement checklist you need to reboot in 14 days—no guesswork, just simple steps to a happier gut 🌿📋" />
   <meta property="og:image" content="https://imgur.com/Embo30b.jpg" />
-  <meta property="og:url" content="https://yourwebsite.com/ultimate-digestive-toolkit" />
+  <meta property="og:url" content="https://gutcare.fit/14-day/06-your-ultimate-digestive-toolkit" />
   <meta property="product:price:amount" content="39" />
   <meta property="product:price:currency" content="USD" />
   <meta property="product:availability" content="in_stock" />
