--- a/14-day/07-sneaky-bloat-triggers/index.html
+++ b/14-day/07-sneaky-bloat-triggers/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Sneaky Bloat Triggers You Never Saw Coming" />
   <meta property="og:description" content="Surprising foods like certain nuts, seeds and nightshades can stall your reset—learn the 7 sneaky culprits & what to swap for instant relief 🥜🚫" />
   <meta property="og:image" content="https://imgur.com/Embo30b.jpg" />
-  <meta property="og:url" content="https://yourwebsite.com/sneaky-bloat-triggers" />
+  <meta property="og:url" content="https://gutcare.fit/14-day/07-sneaky-bloat-triggers" />
   <meta property="product:price:amount" content="39" />
   <meta property="product:price:currency" content="USD" />
   <meta property="product:availability" content="in_stock" />
