--- a/14-day/08-quiet-your-gut-quiet-your-mind/index.html
+++ b/14-day/08-quiet-your-gut-quiet-your-mind/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Quiet Your Gut, Quiet Your Mind – 14‑Day Digestive Health Reboot">
   <meta property="og:description" content="Balanced digestion brings calm clarity—quiet your gut in 14 days with Dr. Joe Leech’s science-backed reboot.">
   <meta property="og:image" content="https://imgur.com/RCMe5K6.jpg">
-  <meta property="og:url" content="https://yourwebsite.com/quiet-your-gut-quiet-your-mind">
+  <meta property="og:url" content="https://gutcare.fit/14-day/08-quiet-your-gut-quiet-your-mind">
   <meta property="product:price:amount" content="39">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
