--- a/14-day/09-top-5-qa-digestive-reset/index.html
+++ b/14-day/09-top-5-qa-digestive-reset/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Top 5 Q&A for Your Digestive Reset" />
   <meta property="og:description" content="Got questions? We’ve got answers—swipe through the top 5 FAQs from real users & feel confident to start your 14‑day transformation today" />
   <meta property="og:image" content="https://imgur.com/7YwykfF.jpg" />
-  <meta property="og:url" content="https://yourwebsite.com/top-5-qa-digestive-reset" />
+  <meta property="og:url" content="https://gutcare.fit/14-day/09-top-5-qa-digestive-reset" />
   <meta property="product:price:amount" content="39" />
   <meta property="product:price:currency" content="USD" />
   <meta property="product:availability" content="in_stock" />
