--- a/14-day/10-community-reset-1200-rebooters/index.html
+++ b/14-day/10-community-reset-1200-rebooters/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Community Reset: Join 1,200+ Rebooters">
   <meta property="og:description" content="Over 1,200 people completed our reboot this month—see the movement, share your progress & feel the support of a thriving gut‑care community 🤝✨">
   <meta property="og:image" content="https://imgur.com/Cw2rtfo.jpg">
-  <meta property="og:url" content="https://yourwebsite.com/community-reset-14day">
+  <meta property="og:url" content="https://gutcare.fit/14-day/10-community-reset-1200-rebooters">
   <meta property="product:price:amount" content="39">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
