--- a/Mitolyn/01-unlock-your-bodys-real-fat-burning-power/index.html
+++ b/Mitolyn/01-unlock-your-bodys-real-fat-burning-power/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Unlock Your Body’s Real Fat-Burning Power" />
   <meta property="og:description" content="Struggling to lose weight even with healthy habits? The problem might not be your willpower—it’s your mitochondria. Mitolyn is a next-gen supplement that fuels your cellular energy and metabolism from the inside out. Users report real results after just 60-90 days: more energy, better sleep, and visible fat loss—without stimulants or crashes. Give your body the tools to work with you, not against you. Tap into true biohacked transformation!" />
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png" />
-  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" />
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/01-unlock-your-bodys-real-fat-burning-power" />
   <title>Unlock Your Body’s Real Fat-Burning Power</title>
   <style>
     body {
