--- a/Mitolyn/02-undercharged-body/index.html
+++ b/Mitolyn/02-undercharged-body/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Your Body Isn’t Broken. It’s Just Undercharged">
   <meta property="og:description" content="You’re not lazy. You’re low-energy at the cellular level. Mitolyn restores mitochondrial function so your body can finally show up fully. 🔋 Empower your real potential.">
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png">
-  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/01-unlock-your-bodys-real-fat-burning-power">
   <title>Your Body Isn’t Broken. It’s Just Undercharged</title>
   <style>
     body {
