--- a/Mitolyn/03-this-isnt-caffeine/index.html
+++ b/Mitolyn/03-this-isnt-caffeine/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="This Isn't Caffeine. It's Cellular Awakening.">
   <meta property="og:description" content="Say goodbye to jitters and fake energy. Mitolyn helps your body produce real, sustained energy by boosting your NAD+ and supporting mitochondrial function. No crashes, no drama—just clarity, calm, and all-day vitality. Ready to feel like yourself again?">
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png">
-  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/03-this-isnt-caffeine">
   <title>This Isn't Caffeine. It's Cellular Awakening.</title>
   <style>
     body {
