--- a/Mitolyn/04-i-didnt-change-my-diet/index.html
+++ b/Mitolyn/04-i-didnt-change-my-diet/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="I Didn’t Change My Diet. My Metabolism Changed Itself.">
   <meta property="og:description" content="What if your body knew how to lose weight—naturally? Mitolyn supports your metabolism at the root cause: your cellular energy factories. Users report effortless appetite control, better digestion, and reduced cravings within weeks. Start your transformation from the inside out!">
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png">
-  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/04-i-didnt-change-my-diet">
   <title>I Didn’t Change My Diet. My Metabolism Changed Itself.</title>
   <style>
     body {
