--- a/Mitolyn/06-biohack-your-energy-without-the-crash/index.html
+++ b/Mitolyn/06-biohack-your-energy-without-the-crash/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Biohack Your Energy — Without the Crash">
   <meta property="og:description" content="Mitolyn gives you real energy by boosting ATP production and mitochondrial repair—no caffeine needed. 💡 Say hello to clarity, drive, and stamina.">
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png">
-  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/06-biohack-your-energy-without-the-crash">
   <title>Biohack Your Energy — Without the Crash</title>
   <style>
     body {
