--- a/Mitolyn/07-the-weight-loss-plan-that-starts-in-your-cells/index.html
+++ b/Mitolyn/07-the-weight-loss-plan-that-starts-in-your-cells/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="How I Beat the Afternoon Slump Without Sugar or Coffee">
   <meta property="og:description" content="⏰ Tired at 3 PM every day? It’s not just stress—it’s mitochondrial fatigue. Mitolyn users say they feel focused and energized all afternoon without sugar crashes or caffeine. Try a smarter solution.">
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png">
-  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/07-the-weight-loss-plan-that-starts-in-your-cells">
   <title>How I Beat the Afternoon Slump Without Sugar or Coffee</title>
   <style>
     body {
