--- a/Mitolyn/08-from-foggy-to-focused/index.html
+++ b/Mitolyn/08-from-foggy-to-focused/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="From Foggy to Focused: What 60 Days on Mitolyn Feels Like" />
   <meta property="og:description" content="Imagine waking up without brain fog. With Mitolyn, users report sharp focus, clearer thinking, and reduced mental fatigue within 6–8 weeks. Ready to reboot your brain?" />
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png" />
-  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" />
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/08-from-foggy-to-focused" />
   <title>From Foggy to Focused: What 60 Days on Mitolyn Feels Like</title>
   <style>
     body {
