--- a/Mitolyn/09-your-metabolism-has-a-switch/index.html
+++ b/Mitolyn/09-your-metabolism-has-a-switch/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Your Metabolism Has a Switch. Mitolyn Turns It On." />
   <meta property="og:description" content="Your sluggish metabolism isn’t your fault—it’s your cells running low on power. Mitolyn supports mitochondrial renewal and NAD+ production to flip the fat-burning switch ON." />
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png" />
-  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" />
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/09-your-metabolism-has-a-switch" />
   <title>Your Metabolism Has a Switch. Mitolyn Turns It On.</title>
   <style>
     body {
