--- a/Mitolyn/10-detox-without-deprivation/index.html
+++ b/Mitolyn/10-detox-without-deprivation/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Detox Without Deprivation">
   <meta property="og:description" content="Detox doesn’t have to mean starving. Mitolyn supports your body’s natural detox pathways by optimizing mitochondrial function and reducing inflammation—no juice cleanse required.">
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png">
-  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/10-detox-without-deprivation">
   <title>Detox Without Deprivation</title>
   <style>
     body {
