--- a/prime-biome/01-lions-mane-benefits/index.html
+++ b/prime-biome/01-lions-mane-benefits/index.html
@@ -9,9 +9,9 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="7 Surprising Benefits of Lion’s Mane for Brain and Body" />
   <meta property="og:description" content="Improve focus, memory, mood, and more with this powerful natural nootropic. Discover how Lion’s Mane works and why it's taking the wellness world by storm." />
-  <meta property="og:url" content="https://gutcare.fit/blog/lions-mane-benefits" />
+  <meta property="og:url" content="https://gutcare.fit/primebiome/01-lions-mane-benefits" />
   <meta property="og:site_name" content="GutCare Fit" />
-  <meta property="og:image" content="https://gutcare.fit/images/lions-mane-brain.jpg" />
+  <meta property="og:image" content="https://imgur.com/D9btGay.jpg" />
 
   <style>
     body {
@@ -128,6 +128,13 @@
     <a href="https://b822f1wnjv2-7vcf2dubcesbut.hop.clickbank.net">
       <img src="https://i.imgur.com/Sfv2abx.jpg" alt="Imagem final do blog" loading="lazy" class="half-size" />
     </a>
-  </div>
+  </main>
+
+  <footer>
+    <h3>FAQs & Disclaimer</h3>
+    <p><strong>Can soil-based probiotics cause side effects?</strong> Most users report improved digestion. Mild detox symptoms (like temporary gas) may occur as your microbiome adjusts.</p>
+    <p><strong>Is this a subscription?</strong> No. You choose when to buy. No hidden rebills.</p>
+    <p><strong>Medical Disclaimer:</strong> This content is for educational purposes only and does not replace medical advice. Always consult a healthcare provider before starting new supplements.</p>
+  </footer>
 </body>
 </html>
