--- a/prime-biome/02-why-your-bloated-belly-isnt-fat-its-this/index.html
+++ b/prime-biome/02-why-your-bloated-belly-isnt-fat-its-this/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Why Your Bloated Belly Isn’t Fat — It’s THIS">
   <meta property="og:description" content="Think it’s fat? It’s an out‑of‑balance microbiome! Primebiome targets the root cause—restore your gut’s harmony and watch the bloat melt away.">
   <meta property="og:image" content="https://imgur.com/aeY02E6.jpg">
-  <meta property="og:url" content="https://gutcare.fit/primebiome">
+  <meta property="og:url" content="https://gutcare.fit/primebiome/02-why-your-bloated-belly-isnt-fat-its-this">
   <meta property="product:price:amount" content="49">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
