--- a/prime-biome/03-confidence-starts-from-your-gut/index.html
+++ b/prime-biome/03-confidence-starts-from-your-gut/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Confidence Starts from Your Gut">
   <meta property="og:description" content="When your digestion’s calm, your mind’s calm—Primebiome helps you shine inside‑out. Join thousands who rediscovered true confidence!">
   <meta property="og:image" content="https://imgur.com/EpDDiTo.jpg">
-  <meta property="og:url" content="https://yourdomain.com/confidence-starts-from-your-gut">
+  <meta property="og:url" content="https://gutcare.fit/prime-biome/03-confidence-starts-from-your-gut">
   <meta property="product:price:amount" content="49">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
