--- a/prime-biome/04-3-gut-signals-ignoring/index.html
+++ b/prime-biome/04-3-gut-signals-ignoring/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="3 Gut Signals You’re Ignoring">
   <meta property="og:description" content="Persistent gas? Irregularity? Brain fog? These 3 silent alarms mean your microbiome is crying for help. Primebiome’s 4 strains answer the call—get the guide now!">
   <meta property="og:image" content="https://imgur.com/Yxi2w5t.jpg">
-  <meta property="og:url" content="https://yourdomain.com/3-gut-signals-youre-ignoring">
+  <meta property="og:url" content="https://gutcare.fit/prime-biome/04-3-gut-signals-youre-ignoring">
   <meta property="product:price:amount" content="49">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
