--- a/prime-biome/05-busy-life/index.html
+++ b/prime-biome/05-busy-life/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Busy Life? 10‑Sec Daily Gut Reset">
   <meta property="og:description" content="No time? No problem—one Primebiome capsule daily takes only 10 seconds but transforms how you feel inside out. Perfect for hectic schedules!">
   <meta property="og:image" content="https://imgur.com/PL4Wzpa.jpg">
-  <meta property="og:url" content="https://gutcare.fit/primebiome">
+  <meta property="og:url" content="https://gutcare.fit/primebiome/05-busy-life">
   <meta property="product:price:amount" content="49">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
