--- a/prime-biome/06-the-gut-pros-wont-tell/index.html
+++ b/prime-biome/06-the-gut-pros-wont-tell/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="The Gut Pros Won’t Tell You">
   <meta property="og:description" content="Gut specialists overlook soil‑based strains—Primebiome fills that critical gap. Discover the secret they’re not talking about!">
   <meta property="og:image" content="https://imgur.com/QKmUHve.jpg">
-  <meta property="og:url" content="https://gutcare.fit/primebiome">
+  <meta property="og:url" content="https://gutcare.fit/primebiome/06-the-gut-pros-wont-tell">
   <meta property="product:price:amount" content="49">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
