--- a/prime-biome/07-7‑day-primebiome-experiment/index.html
+++ b/prime-biome/07-7‑day-primebiome-experiment/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="7‑Day Primebiome Experiment">
   <meta property="og:description" content="Just 1 capsule a day—for 7 days. That’s all it takes to start feeling the shift: less bloat, more clarity, smoother digestion. PrimeBiome’s science-backed blend is small, but mighty.">
   <meta property="og:image" content="https://imgur.com/W2mxLzR.jpg">
-  <meta property="og:url" content="https://gutcare.fit/primebiome">
+  <meta property="og:url" content="https://gutcare.fit/primebiome/07-7‑day-primebiome-experiment">
   <meta property="product:price:amount" content="49">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
