--- a/prime-biome/09-feel-light-again-from-the-soil-up/index.html
+++ b/prime-biome/09-feel-light-again-from-the-soil-up/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Feel Light Again—From the Soil Up">
   <meta property="og:description" content="Discover how Primebiome’s 4‑strain soil‑based probiotic blend restored my digestive freedom in just weeks 🌿✨ Say goodbye to bloating, gas and gut discomfort for good—science‑backed relief is here!">
   <meta property="og:image" content="https://imgur.com/9sAohQn.jpg">
-  <meta property="og:url" content="https://gutcare.fit/primebiome">
+  <meta property="og:url" content="https://gutcare.fit/primebiome/09-feel-light-again-from-the-soil-up">
   <meta property="product:price:amount" content="49">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
