--- a/prime-biome/08-youthful-energy-from-within/index.html
+++ b/prime-biome/08-youthful-energy-from-within/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Youthful Energy from Within ✨">
   <meta property="og:description" content="Your gut ages you—but Primebiome’s probiotic boost rejuvenates digestion for more energy & clarity. Feel 10 years younger!">
   <meta property="og:image" content="https://imgur.com/Evn9ylp.jpg">
-  <meta property="og:url" content="https://gutcare.fit/primebiome">
+  <meta property="og:url" content="https://gutcare.fit/primebiome/08-youthful-energy-from-within">
   <meta property="product:price:amount" content="49">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
