--- a/prime-biome/10-bloated-and-exhausted-reset-your-gut/index.html
+++ b/prime-biome/10-bloated-and-exhausted-reset-your-gut/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Bloated & Exhausted? Reset Your Gut in 10 Seconds a Day">
   <meta property="og:description" content="PrimeBiome is the gut-based routine that supports your skin, mood, and digestion—all in 1 gummy a day.">
   <meta property="og:image" content="https://imgur.com/CUloWL6.jpg">
-  <meta property="og:url" content="https://yourdomain.com/bloated-and-exhausted-reset-gut">
+  <meta property="og:url" content="https://gutcare.fit/primebiome/10-bloated-and-exhausted-reset-gut">
   <meta property="product:price:amount" content="49">
   <meta property="product:price:currency" content="USD">
   <meta property="product:availability" content="in_stock">
